--- a/my_page.css
+++ b/my_page.css
@@ -77,7 +77,7 @@ section {
 
 .my_main2_img {
     width: 350px;
-    border-radius: 20%;
+    border-radius: 180px;
     margin-left: -30px;
     margin-top: 50px;
     box-shadow: 10px 6px 18px -1px rgba(0,0,0,0.69);
