--- a/my_page_mobile.css
+++ b/my_page_mobile.css
@@ -130,7 +130,7 @@
         left: 0;
         width: auto;
         border: 5px solid white;
-        margin: 10px;
+        margin: 10px 20px;
         top: 10px;
     }
     #hobbies_text {
@@ -138,7 +138,7 @@
     }
     #hobbies_text_box {
         right: 0;
-        top: 325px;
+        top: 340px;
         /* bottom: 30px; */
         width: 90%;
         left: 30px;
