--- a/my_page_mobile.css
+++ b/my_page_mobile.css
@@ -29,6 +29,22 @@
 } */
 
 @media (max-width: 768px) and (min-width: 390px) {
+    
+    .cv_area a {
+        display: inline-block;
+        margin: 0 20%;
+        width: 60%;
+     }
+     .cv_area a:link, a:visited {
+        display: inline-block;
+        margin: 0 20%;
+        width: 60%;
+     }
+     .cv_area a:hover, a:focus, a:active {
+        display: inline-block;
+        margin: 0 20%;
+        width: 60%;
+     }
     a.dropdown-item {
         font-size: 14px;
     }
@@ -220,5 +236,19 @@
     a#dropdownMenuLink {
         border: 0 !important;
     }
-    
+    .like_img {
+        margin: 10px 0 10px 10px;
+    }
+    .hit_like_box {
+        left: calc(50% - 150px);
+        width: 300px !important;
+        top: calc(50% - 270px);
+    }
+    .like_texts {
+        padding: 10px;
+        margin-top: 0;
+    }
+    .like_texts h1 {
+        font-size: 30px;
+    }
 }
