--- a/my_page.css
+++ b/my_page.css
@@ -426,12 +426,15 @@ p {
     width: 80px;
     background: #0000008e;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .nav_left i {
-    top: 50%;
+    /* top: 50%;
     left: 35%;
-    position: absolute;
+    position: absolute; */
     transition: all 0.3s;
     opacity: 0.6;
     font-size: 30px;
@@ -445,13 +448,13 @@ p {
     width: 80px;
     background: #0000008e;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .nav_right i {
     font-size: 30px;
-    top: 50%;
-    left: 45%;
-    position: absolute;
     transition: all 0.3s;
     opacity: 0.6;
   }
@@ -689,4 +692,18 @@ p {
   font-size: 12px;
   cursor: pointer;
   margin-top: 10px;
+}
+.like_btn i:active {
+  background: #4a45a8
+}
+
+.username_div {
+  margin-bottom: 10px;
+}
+#username {
+  border: 1px solid #cacaca;
+  padding: 5px 10px;
+  border-radius: 5px;
+  outline: 0;
+  width: 100%;
 }
