bug fix and new css changes

--- a/my_page.css
+++ b/my_page.css
@@ -15,6 +15,14 @@ body {
     }
 } */
 
+p.quoted {
+  font-family: 'Comforter Brush', cursive;
+  font-weight: 300;
+  font-size: 35px;
+  line-height: 1.3;
+  margin-bottom: 0;
+}
+
 .fixed_nav {
     z-index: 99;
     overflow: hidden;
@@ -173,7 +181,9 @@ p {
 }
 
 .card_body {
-    font-weight: 300;
+    /* font-weight: 300; */
+    font-size: 14px;
+    padding: 20px 10px;
 }
 
 #container {
@@ -231,7 +241,7 @@ p {
 
 .box1, .box2, .box3 {
     padding: 20px 30px;
-    border-radius: 10px;
+    border-radius: 10px 50px;
     width: 500px;
     height: 450px;
     cursor: pointer;
@@ -569,6 +579,12 @@ p {
 
   .contact_section {
     height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    padding: 0 90px;
   }
 
   .contact_section.row {
