--- a/my_page_mobile.css
+++ b/my_page_mobile.css
@@ -1,4 +1,4 @@
-@media (min-width: 1280px) {
+@media (min-width: 1020px) {
     .dropdown.ham_drop {
         display: none;
     }
@@ -122,12 +122,14 @@
       }
     .box1, .box2, .box3 {
         padding: 20px 30px;
-        border-radius: 10px;
+        border-radius: 10px 50px;
         width: 300px;
         height: 400px;
       }
     .card_body {
         font-size: 12px;
+        height: 70%;
+        overflow: scroll;
     }
     .b1, .b2 {
         margin-top: -90px;
@@ -193,7 +195,7 @@
         top: 340px;
         /* bottom: 30px; */
         width: 90%;
-        left: 30px;
+        left: 20px;
         padding: 10px 20px
     }
     #hobbies_heading {
