mobile css for open screen changes

--- a/typewriter.css
+++ b/typewriter.css
@@ -58,7 +58,7 @@ body {
     z-index: 99999 !important;
     position: absolute !important;
     top: 0;
-    bottom: 0;
+    bottom: -100px;
     left: 0;
     right: 0;
     background: white !important;
@@ -122,7 +122,7 @@ body {
 @keyframes fadeOut {
     to {
         /* opacity: 0; */
-        transform: translateY(-100vh);
+        transform: translateY(-120vh);
     }
 }
 
