--- a/my_page_mobile.css
+++ b/my_page_mobile.css
@@ -264,4 +264,14 @@
     .like_texts h1 {
         font-size: 30px;
     }
+    .employee_img {
+        width: 5rem;
+        position: absolute;
+        border-radius: 50%;
+        top: -14px;
+        left: 0px;
+    }
+    .abccd a {
+        font-size: 14px !important;
+    }
 }
