--- a/my_page_mobile_small.css
+++ b/my_page_mobile_small.css
@@ -254,4 +254,15 @@
     .mobile_texts {
         font-size: 12px;
     }
+    
+    .employee_img {
+        width: 5rem;
+        position: absolute;
+        border-radius: 50%;
+        top: -14px;
+        left: 0px;
+    }
+    .abccd a {
+        font-size: 14px !important;
+    }
 }
